tests/ui/parse_empty_try_from_os.stderr
error: proc-macro derive panicked
  --> $DIR/parse_empty_try_from_os.rs:11:10
   |
11 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: cannot omit parser function name with `try_from_os_str`
